数据库日志或其他优化